--- a/style.css
+++ b/style.css
@@ -102,4 +102,20 @@ footer {
   color: white;
   text-align: center;
   padding: 20px;
+
+}
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+  z-index: 100;
+  line-height: 60px;
 }
